src/pages/en/v1.12.0/cli.mdx
---
title: "OpenReplay's CLI"
metaTitle: "OpenReplay's CLI"
metaDescription: "Details about the OpenReplay CLI utility"
minVersion: "1.10.0"
---

Starting with v1.10.0 we've released our CLI utility. With it, the most common tasks you'd have to run to manage your self-hosted version of OpenReplay can now be done with a simple command.


## Installing the CLI

The CLI comes with every self-hosted version of OpenReplay.

## Using the CLI

The CLI has the following syntax:

```bash 
openreplay [command] <service>
```

The list of available commands is:

- `-h or --help`: This command will display the list of commands and services available.
- `-s or --status`: If you want to know what's the status of the deployed sevices ,this command will give tell you everything you need to know.
- `-u or --upgrade`: Used to upgrade your installation to the latest version available.
- `-U or --deprecated-upgrade /path/to/old_vars.yaml`: ????
- `-r or --restart`: Allows you to restart all services . By doing so, you can fix unresponsive services.
- `-R or --Reload`: Reloads the configuration of a service, so use it only when you change something.
- `-p or --install-packages`: It updates all 3rd party dependencies (like `kubectl`, `helm`, etc).
- `-i or --install domain.name.com`: Install OpenReplay to the machine.
- `-e or --edit`: Edit installed OpenReplay configuration and reload.
- `-l or --logs SERVICE`: Shows the logs from one particular service.

The list of all services available to the CLI is:

- alerts
- assets
- assist
- chalice
- db
- ender
- frontend
- heuristics
- http
- integrations
- ngix-controller
- peers
- sink
- sourcemapreader
- storage

## Example
To get the deployment status, run the below CLI command:

```bash 
openreplay -s 
```

The result would be something similar to this:

![OpenReplay status](/cli/or-cli-status.png)
